[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py416"
version = "0.62"
authors = [
  { name="Ezio416", email="ezezio416@gmail.com" },
]
description = "don't question my methods"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "py7zr >= 0.20.2",
  "py-cpuinfo >= 9.0.0",
  "send2trash >= 1.8.0"
]

[project.urls]
"Homepage" = "https://github.com/ezio416/py416"
"Bug Tracker" = "https://github.com/ezio416/py416/issues"

[project.scripts]
jsp = "py416.scripts:jsp"
rmd = "py416.scripts:rmd"
uzd = "py416.scripts:uzd"